# resume-score

./: Dockerfile  LICENSE  README.md  app.py  openenv.yaml  pyproject.toml  requirements.txt  validate.py
baseline/: inference.py
environment/: __init__.py  env.py  graders.py  models.py  tasks.py
frontend/: index.html
server/: app.py
tests/: test_env.py
